--- a/Assets/_scss/_settings/_settings.scss
+++ b/Assets/_scss/_settings/_settings.scss
@@ -10,7 +10,7 @@
 // Support $vars
 // =============================================================================
 $isResponsive: 					0; // If set to '1' CSS-Viewport-Rules are added
-$isOldIE: 							1; // If set to '0' it will remove unnecessary stuff from normalize.css
+$isOldIE: 							1; // If set to '0' it will ignore IE6 & IE7 Hacks while compiling
 // Support-table for $isOldIE: 0;
 // Google Chrome
 // Mozilla Firefox 4+
