--- a/Assets/_scss/_settings/_mixins.scss
+++ b/Assets/_scss/_settings/_mixins.scss
@@ -2,7 +2,7 @@
 // mixins.scss
 //
 // Mixins to develope faster
-// DOCS: http://sass-lang.com/docs/yardoc/file.SASS_REFERENCE.html
+// DOCS: http://sass-lang.com/docs/yardoc/file.SASS_REFERENCE.html#mixins
 // ==========================================================
 
 
