--- a/Assets/_scss/_settings/_placeholders.scss
+++ b/Assets/_scss/_settings/_placeholders.scss
@@ -7,7 +7,7 @@
  * Usage:
  * @extend %name;
  *
- * DOCS: http://sass-lang.com/docs/yardoc/file.SASS_REFERENCE.html
+ * DOCS: http://sass-lang.com/docs/yardoc/file.SASS_REFERENCE.html#placeholder_selectors_
  * ========================================================== */
 
 
