--- a/Assets/_scss/_settings/_settings.scss
+++ b/Assets/_scss/_settings/_settings.scss
@@ -2,7 +2,7 @@
 // _settings.scss
 //
 // Merges all listed stylesheets and does the SASS & Compass magic
-// DOCS: http://sass-lang.com/docs/yardoc/file.SASS_REFERENCE.html
+// DOCS: http://sass-lang.com/docs/yardoc/file.SASS_REFERENCE.html#variables_
 // ==========================================================
 
 
