--- a/Assets/_scss/base/_normalize.scss
+++ b/Assets/_scss/base/_normalize.scss
@@ -9,7 +9,7 @@
 
 /* =============================================================================
 $ HTML5 display definitions
-========================================================================== */
+================================================================================ */
 
 /*
  * Corrects `block` display not defined in IE6/7/8/9 & FF3.
@@ -61,7 +61,7 @@ audio:not([controls]) {
 
 /* =============================================================================
 $ Base
-========================================================================== */
+================================================================================ */
 
 /*
  * 1. Corrects text resizing oddly in IE6/7 when body `font-size` is set using
@@ -108,7 +108,7 @@ body {
 
 /* =============================================================================
 $ Links
-========================================================================== */
+================================================================================ */
 
 /*
  * Addresses `outline` inconsistency between Chrome and other browsers.
@@ -131,7 +131,7 @@ a:hover {
 
 /* =============================================================================
 $ Typography
-========================================================================== */
+================================================================================ */
 
 /*
  * Addresses styling not present in IE7/8/9, S5, Chrome.
@@ -249,9 +249,9 @@ sub {
 }
 
 @if $isOldIE == 1 {
-	/* ==========================================================================
-	   Lists
-	   ========================================================================== */
+/* =============================================================================
+$ Lists
+================================================================================ */
 
 	/*
 	 * Addresses margins set differently in IE6/7.
@@ -290,8 +290,8 @@ sub {
 }
 
 /* =============================================================================
-$ Embedded content
-========================================================================== */
+$ Embedded Content
+================================================================================ */
 
 /*
  * 1. Removes border when inside `a` element in IE6/7/8/9, FF3.
@@ -315,7 +315,7 @@ svg:not(:root) {
 
 /* =============================================================================
 $ Figures
-========================================================================== */
+================================================================================ */
 
 /*
  * Addresses margin not present in IE6/7/8/9, S5, O11.
@@ -328,7 +328,7 @@ figure {
 
 /* =============================================================================
 $ Forms
-========================================================================== */
+================================================================================ */
 
 @if $isOldIE == 1 {
 	/*
@@ -482,9 +482,9 @@ textarea {
 	vertical-align: top; /* 2 */
 }
 
-/* ==========================================================================
-   Tables
-   ========================================================================== */
+/* =============================================================================
+$ Tables
+================================================================================ */
 
 /*
  * Remove most spacing between table cells.
