--- a/Assets/_scss/main.scss
+++ b/Assets/_scss/main.scss
@@ -3,7 +3,7 @@
 // Base Version 1.0.7
 //
 // Merges all listed stylesheets and does the SASS & Compass magic
-// DOCS: http://sass-lang.com/docs/yardoc/file.SASS_REFERENCE.html
+// DOCS: http://sass-lang.com/docs/yardoc/file.SASS_REFERENCE.html#import
 // ==========================================================
 @charset "UTF-8";
 
