--- a/Assets/_scss/_settings/_settings.scss
+++ b/Assets/_scss/_settings/_settings.scss
@@ -34,6 +34,8 @@ $columnGutter:          20px;   // Inner spacing
 $layoutWidth:           960px;  // Grid Setup
 $bodyBackground:        #fff;
 $contentBackground:     $bodyBackground; // Used for generating some colors
+$textDirection:         left;
+
 
 $query-tablet:          800px;  // Tablets
 $query-smartphoneLarge: 480px;  // Phone - Landscape
