--- a/Assets/_scss/components/_tables.scss
+++ b/Assets/_scss/components/_tables.scss
@@ -12,13 +12,13 @@ $ Tables
 table {
   width: 100%;
   margin: 0 0 ($baseLineHeight/$baseFontSize) + em;
-  caption { text-align: left; }
+  caption { text-align: $textDirection; }
 }
 th {
   padding: 7px 8px 3px;
-  text-align: left;
 }
 td { padding: 9px 8px 7px; }
+th { text-align: $textDirection; }
 
 
 
