--- a/Assets/_scss/components/_tables.scss
+++ b/Assets/_scss/components/_tables.scss
@@ -14,11 +14,8 @@ table {
   margin: 0 0 ($baseLineHeight/$baseFontSize) + em;
   caption { text-align: $textDirection; }
 }
-th {
-  padding: 7px 8px 3px;
-}
-td { padding: 9px 8px 7px; }
 th { text-align: $textDirection; }
+th, td { vertical-align: top; }
 
 
 
@@ -31,9 +28,11 @@ $ Contenttable-1 (Bordered Table w/ odd & even)
   td, th {
     border-left: 1px solid $basicBorderColor;
     border-bottom: 1px solid $basicBorderColor;
+    padding: 0.5em;
   }
+
   /*tr*/.tr-even { background: $contentBackground; }
-  /*tr*/.tr-odd { background: darken($contentBackground, 10%); }
+  /*tr*/.tr-odd { background: darken($contentBackground, 5%); }
   /*tr*/.tr-last td { border-bottom: 0; }
   /*td*/.td-0 { border-left: 0; }
 }
@@ -44,6 +43,8 @@ $ Contenttable-2 (Clean Table)
 ================================================================================ */
 /*table*/.contenttable-2 {
   td, th { border-bottom: 1px solid $basicBorderColor; }
+  th { padding: 0 0.5em 0.5em; }
+  td { padding: 0.5em; }
 }
 
 
@@ -51,7 +52,9 @@ $ Contenttable-2 (Clean Table)
 $ Contenttable-3 (Clean Table (condensed))
 ================================================================================ */
 /*table*/.contenttable-3 {
-  td, th { border-bottom: 1px solid $basicBorderColor; }
-  th { padding: 5px 8px 2px; }
-  td { padding: 5px 8px 3px; }
+  td, th {
+    border-bottom: 1px solid $basicBorderColor;
+    padding: 0.25em 0.5em 0.25em;
+  }
+  th { padding-top: 0; }
 }
