--- a/Assets/_scss/components/_forms.scss
+++ b/Assets/_scss/components/_forms.scss
@@ -65,6 +65,9 @@ label {
   font-size: 14px;
   font-size: rs(14, $unit: rem);
 }
+form {
+  ol, ul { @extend %reset-list; }
+}
 
 
 /* =============================================================================
