Changes to the grid for RTL-Templates

--- a/Assets/_scss/_settings/_functions.scss
+++ b/Assets/_scss/_settings/_functions.scss
@@ -40,3 +40,15 @@
 @function rs( $target, $context: $baseFontSize, $unit: em ) {
   @return #{$target/$context}$unit;
 }
+
+
+// =============================================================================
+// Text direction check
+// Based on code from suit (@necolas), https://github.com/necolas/suit
+// =============================================================================
+$start:                 left !default;
+$end:                   right !default;
+@if $direction == rtl {
+  $start: right;
+  $end: left;
+}
