--- a/Assets/_scss/_settings/_settings.scss
+++ b/Assets/_scss/_settings/_settings.scss
@@ -8,7 +8,9 @@
 
 // =============================================================================
 // Support $vars
+// Project Settings
 // =============================================================================
+// ============================= Support $vars ============================
 $isResponsive:          0;      // If set to '1' CSS-Viewport-Rules are added
 $isOldIE:               1;      // If set to '0' it will ignore IE6 & IE7 Hacks while compiling
 // Support-table for $isOldIE: 0;
@@ -17,6 +19,9 @@ $isOldIE:               1;      // If set to '0' it will ignore IE6 & IE7 Hacks 
 // Apple Safari 5+
 // Opera 12+
 // Internet Explorer 8+
+
+// ============================ Text Direction ============================
+$direction:             ltr;  // set "dir" attribute in HTML to "ltr" (default) or "rtl"
 
 
 // =============================================================================
