Added a $basicSpacing var

--- a/Assets/_scss/_settings/_settings.scss
+++ b/Assets/_scss/_settings/_settings.scss
@@ -67,6 +67,7 @@ $baseLineHeight:        24;   // px
 $baseFontFamily:        $sansFontFamily;
 $baseFontWeight:        $regular;
 $baseTextColor:         #3C474B;
+$basicSpacing:          $baseLineHeight / $baseFontSize +em;
 
 // =============================== Headings ===============================
 $headingsFontFamily:    inherit; // empty to use $baseFontFamily
