Renamed _placeholders.scss to _shared.scss

--- a/Assets/_scss/_settings/_shared.scss
+++ b/Assets/_scss/_settings/_shared.scss
@@ -1,8 +1,7 @@
 /* ==========================================================
- * placeholders.scss
+ * shared.scss
  *
- * Placeholders to develope faster
- * Use these to reduce duplicate code
+ * Shared styles(%placeholders) to reduce duplicate code
  *
  * Usage:
  * @extend %name;
