Removed the unit from $columnGutter

--- a/Assets/_scss/_settings/_settings.scss
+++ b/Assets/_scss/_settings/_settings.scss
@@ -28,7 +28,7 @@ $direction:             ltr;  // set "dir" attribute in HTML to "ltr" (default) 
 // =============================================================================
 // $columWidth:            60px;   // Disabled by default, it'll be calculated
 $totalColumns:          12;     // Number of columns
-$columnGutter:          20px;   // Inner spacing
+$columnGutter:          20;     // Inner spacing
 
 
 // =============================================================================
