Added text-align on body {} for RTL-Templates

--- a/Assets/_scss/base/_normalize.scss
+++ b/Assets/_scss/base/_normalize.scss
@@ -102,6 +102,7 @@ body {
   font: $baseFontWeight #{$baseFontSize/16*100}%/$basicSpacing $baseFontFamily;
   background: $bodyBackground;
   -webkit-font-smoothing: antialiased;
+  text-align: $start;
 }
 
 
