Removed header classes from base settings
Shouldn't be used on elements other than h#

--- a/Assets/_scss/components/_typography.scss
+++ b/Assets/_scss/components/_typography.scss
@@ -33,9 +33,7 @@ a {
 /* =============================================================================
 $ Headings
 ================================================================================ */
-#{headings(all)},
-.h1, .h2, .h3,
-.h4, .h5, .h6 {
+#{headings(all)} {
   font-family: $headingsFontFamily;
   font-weight: $headingsFontWeight;
   color: $headingsColor;
