Structuring navigations.scss

--- a/Assets/_scss/components/_navigations.scss
+++ b/Assets/_scss/components/_navigations.scss
@@ -20,10 +20,9 @@ $ Navigations
 }
 
 /* ======================= Stacked Navigation ======================= */
-.stacked ul {
-  li { display: list-item;
-    a { display: block; }
-  }
+/*.nav*/.stacked ul li {
+  display: list-item;
+  a { display: block; }
 }
 
 /* ======================== Main Navigation ========================= */
