--- a/Assets/_scss/components/_typography.scss
+++ b/Assets/_scss/components/_typography.scss
@@ -33,7 +33,8 @@ a {
 /* =============================================================================
 $ Headings
 ================================================================================ */
-#{headings(all)} {
+h1, h2, h3,
+h4, h5, h6 {
   font-family: $headingsFontFamily;
   font-weight: $headingsFontWeight;
   color: $headingsColor;
