Added a _media.scss file
Used to style elements like images, audio and video.

--- a/Assets/_scss/components/_typography.scss
+++ b/Assets/_scss/components/_typography.scss
@@ -85,28 +85,11 @@ menu { margin: 0 0 $basicSpacing +em; }
 
 /* =============================================================================
 $ Attachements, Images & Links
-  Contents: 1: Make Images & Attachements responsive
-            2: Styling the alt="" Text on images ( http://csswizardry.com/2011/06/styling-alt-text-on-images/ )
-            3: Decrease font-size on figcaption elements
-            4: Increasing the Clickable Area of Inline Links ( http://joshnh.com/2012/09/06/increasing-the-clickable-area-of-inline-links/ )
+  Contents: 1: Increasing the Clickable Area of Inline Links ( http://joshnh.com/2012/09/06/increasing-the-clickable-area-of-inline-links/ )
 ================================================================================ */
-embed, iframe, object, img { /* 1 */
-  max-width: 100%;
-  height: auto;
-}
 
-figure > img {
-  display: block;
-}
-figcaption {
-  font-size: ($baseFontSize - 2) +px;
-  font-size: rs( ($baseFontSize - 2), $unit: rem);
-}
-img { /* 2 */
-  font-style: italic;
-}
 
-p a { /* 4 */ // TODO: Cross-Browser testing
+p a { /* 1 */ // TODO: Cross-Browser testing
   margin: -.33em;
   padding: .33em;
   position: relative;
