--- a/Assets/_scss/main.scss
+++ b/Assets/_scss/main.scss
@@ -28,6 +28,7 @@
 // Components
 // =============================================================================
 @import "components/_typography";     // Basic typography
+@import "components/_media";          // Basic styling of media elements
 @import "components/_tables";         // Basic styling of tables
 @import "components/_forms";          // Basic styling of forms
 @import "components/_navigations";    // Site navigation
