--- a/Assets/_scss/components/_forms.scss
+++ b/Assets/_scss/components/_forms.scss
@@ -75,8 +75,9 @@ form {
 
 
 /* =============================================================================
-$ Searchforms
+$ Secific forms
 ================================================================================ */
+// ========================= Searchform ========================
 /*form*/.searchform {
   label { }
   input {
