Improve font-size variable comment

--- a/Assets/_scss/_settings/_variables.scss
+++ b/Assets/_scss/_settings/_variables.scss
@@ -60,8 +60,8 @@ $serifFontFamily:       Georgia, "Times New Roman", Times, serif;
 $monoFontFamily:        Menlo, Monaco, Consolas, "Courier New", monospace;
 
 // ========================== Base font settings ==========================
-$baseFontSize:          16;   // px
-$baseLineHeight:        24;   // px
+$baseFontSize:          16; // Set in px
+$baseLineHeight:        24; // Set in px
 $baseFontFamily:        $sansFontFamily;
 $baseFontWeight:        $regular;
 $baseTextColor:         #3C474B;
