Remove duplicate code for spacing html elements

--- a/Assets/_scss/base/_normalize.scss
+++ b/Assets/_scss/base/_normalize.scss
@@ -169,16 +169,17 @@ mark {
   color: color-adjust($cd-primary, 100%);
 }
 
-@if $isOldIE == 1 {
-  /*
-   * Addresses margins set differently in IE6/7.
-   */
 
-  p,
-  pre {
-    margin: 1em 0;
-  }
-}
+// Will be set in typography.scss
+// /*
+//  * Addresses margins set differently in IE6/7.
+//  */
+//
+// p,
+// pre {
+//   margin: 1em 0;
+// }
+
 
 /*
  * Corrects font family set oddly in IE6, S4/5, Chrome.
