--- a/Assets/_scss/base/_normalize.scss
+++ b/Assets/_scss/base/_normalize.scss
@@ -259,6 +259,7 @@ $ Lists
    * Addresses margins set differently in IE6/7.
    */
 
+  // Will be set in typography.scss
   // dl,
   // menu,
   // ol,
