--- a/Assets/_scss/components/_navigations.scss
+++ b/Assets/_scss/components/_navigations.scss
@@ -16,7 +16,7 @@ $ Navigations
     display: block;
     &:hover { }
   }
-  li.active a { }
+  .active a { }
 }
 
 /* ======================= Stacked Navigation ======================= */
