--- a/Assets/_scss/components/_forms.scss
+++ b/Assets/_scss/components/_forms.scss
@@ -9,7 +9,7 @@
 /* =============================================================================
 $ General styling of Input Fields
 ================================================================================ */
-// ====================== Base input styles ======================
+/* ====================== Base input styles ====================== */
 textarea,
 input[type="email"],
 input[type="number"],
@@ -32,18 +32,18 @@ input[type="week"] {
   &:hover { border-color: darken($basicBorderColor, 20%); }
 }
 
-// ======================== Textinputs =========================
+/* ======================== Textinputs ========================= */
 textarea {
   min-height: 70px;
 }
 
-// ========================= Checkboxes ========================
+/* ========================= Checkboxes ======================== */
 input[type="checkbox"],
 input[type="radio"] {
   margin-right: 4px;
 }
 
-// ========================== Buttons ==========================
+/* ========================== Buttons ========================== */
 .btn,
 button,
 input[type="button"],
@@ -81,7 +81,7 @@ form {
 /* =============================================================================
 $ Secific forms
 ================================================================================ */
-// ========================= Searchform ========================
+/* ========================= Searchform ======================== */
 /*form*/.searchform {
   label { }
   input {
