--- a/Assets/_scss/_settings/_shared.scss
+++ b/Assets/_scss/_settings/_shared.scss
@@ -10,14 +10,14 @@
  * ========================================================== */
 
 
-// ======================== Reset list ==================================
+/* ========================== Reset list ========================= */
 %reset-list {
   list-style: none;
   margin: 0;
   padding: 0;
 }
 
-// ======================== Cross browser inline-block ===============================
+/* ================== Cross browser inline-block ================= */
 %inline-block {
   display: inline-block;
   @if $isOldIE == 1 {
@@ -26,13 +26,13 @@
   }
 }
 
-// ===================== Simple Replace ===========================
+/* ========================= Text Replace ======================== */
 %replace {
   font: 0/0 a;
   text-shadow: none;
 }
 
-// ======================== CSS3 Word-breaker ============================
+/* ====================== CSS3 Word-breaker ====================== */
 %hyphens {
   -ms-word-break: break-all;
       word-break: break-all;
